# rez-mcp

./: .gitignore  Dockerfile  README.md  config.py  data.py  main.py  manager.py  pyproject.toml  signer.py  utils.py
.github/workflows/: build-image.yaml
src/: config.py  main.py  manager.py  signer.py
src/templates/: error.html
src/tools/: hallticket.py  results.py  setup.py
templates/: login.html
test/: mcp.py
tools/: hallticket.py  results.py  setup.py  utils.py
